Auth 2926/teams v2 migrations (#2934)
* Move operator team rename into schema migs


* Integrate cli migration into schema migration


* Remove datamigrations


* Rename migration


* Remove refs to datamigration


* Remove refs to upgrade/reset iam
