# components/automate-gateway/api/iam/v2/teams.swagger.json
@@ -494,9 +494,6 @@
         }
       }
     },
-    "chef.automate.api.iam.v2.ApplyV2DataMigrationsResp": {
-      "type": "object"
-    },
     "chef.automate.api.iam.v2.CreateTeamReq": {
       "type": "object",
       "properties": {
@@ -595,9 +592,6 @@
           }
         }
       }
-    },
-    "chef.automate.api.iam.v2.ResetAllTeamProjectsResp": {
-      "type": "object"
     },
     "chef.automate.api.iam.v2.Team": {
       "type": "object",
