# components/automate-gateway/api/iam_v2_teams.pb.swagger.go
@@ -497,9 +497,6 @@ func init() {
         }
       }
     },
-    "chef.automate.api.iam.v2.ApplyV2DataMigrationsResp": {
-      "type": "object"
-    },
     "chef.automate.api.iam.v2.CreateTeamReq": {
       "type": "object",
       "properties": {
@@ -598,9 +595,6 @@ func init() {
           }
         }
       }
-    },
-    "chef.automate.api.iam.v2.ResetAllTeamProjectsResp": {
-      "type": "object"
     },
     "chef.automate.api.iam.v2.Team": {
       "type": "object",
